--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "autoprefixer": "10.4.16",
     "postcss": "8.4.31",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0"
+}
+
   }
 }
